--- a/WAP_SYS_V_Java/nbproject/project.properties
+++ b/WAP_SYS_V_Java/nbproject/project.properties
@@ -32,6 +32,7 @@ excludes=
 file.reference.JAVA-App_code=../App_code
 file.reference.JAVA-App_data=../App_data
 file.reference.JAVA-test=../test
+file.reference.WAP_SYS_V-JAVA=..
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -69,7 +70,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=WAP_V.Wap_V
+main.class=main
 # Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
 manifest.custom.codebase=
 # Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
@@ -92,5 +93,6 @@ run.test.classpath=\
 source.encoding=UTF-8
 src.App_code.dir=${file.reference.JAVA-App_code}
 src.App_data.dir=${file.reference.JAVA-App_data}
+src.JAVA.dir=${file.reference.WAP_SYS_V-JAVA}
 test.src.dir=test
 test.test.dir=${file.reference.JAVA-test}
