JSON Library added

--- a/WAP_SYS_V_Java/nbproject/project.properties
+++ b/WAP_SYS_V_Java/nbproject/project.properties
@@ -31,13 +31,15 @@ endorsed.classpath=
 excludes=
 file.reference.JAVA-App_code=../App_code
 file.reference.JAVA-App_data=../App_data
+file.reference.JAVA-libs=../libs
 file.reference.JAVA-test=../test
 file.reference.WAP_SYS_V-JAVA=..
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
-javac.classpath=
+javac.classpath=\
+    ${file.reference.JAVA-libs}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
@@ -91,7 +93,5 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
-src.App_code.dir=${file.reference.JAVA-App_code}
-src.App_data.dir=${file.reference.JAVA-App_data}
 src.JAVA.dir=${file.reference.WAP_SYS_V-JAVA}
 test.src.dir=test
